ad whoami, ip and some color adjustement

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,6 +24,10 @@ set -g base-index 1
 # make pane numbering consistent with windows
 setw -g pane-base-index 1 
 
+# Notifying if other windows has activities
+setw -g monitor-activity on
+set -g visual-activity on
+
 # test mouse
 # set -g mouse-select-pane on
 # set-option -g mouse-select-window on
@@ -67,9 +71,9 @@ set-window-option -g clock-mode-colour colour40 #green
 
 # show host name and IP address on left side of status bar
 set -g status-left-length 70
-set -g status-left "#[bg=black] #h "
+set -g status-left "#[fg=colour244]#(/sbin/ifconfig eth0 | grep 'inet adr' | cut -d: -f2 | awk '{print $1}') #[bg=black,fg=default] #(whoami)@#H "
 
 # show session name, window & pane number, date and time on right side of
 # status bar
 set -g status-right-length 60
-set -g status-right "#[fg=orange]#S #I:#P #[bg=black,fg=brightblue] %l:%M %p"
+set -g status-right "#[fg=orange]#S:#I:#P #[bg=black,fg=brightblue]%l:%M %p"
