--- a/.gitconfig
+++ b/.gitconfig
@@ -8,6 +8,7 @@
 [alias]
     st = status
     ci = commit
+    co = checkout
     lg = log --graph --pretty=tformat:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%an %ar)%Creset'
     last = log --graph --pretty=tformat:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%an %ar)%Creset' -n 1
 
