--- a/.gitconfig
+++ b/.gitconfig
@@ -7,6 +7,7 @@
 
 [alias]
     st = status
+    br = branch
     ci = commit
     co = checkout
     lg = log --graph --pretty=tformat:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%an %ar)%Creset'
