--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,14 +28,22 @@ setw -g pane-base-index 1
 setw -g monitor-activity on
 set -g visual-activity on
 
-# test mouse
-# set -g mouse-select-pane on
-# set-option -g mouse-select-window on
-# set -g mode-mouse on
+# Mouse
+# Mouse on
+bind m \
+  set -g mode-mouse on \;\
+  set -g mouse-resize-pane on \;\
+  set -g mouse-select-pane on \;\
+  set -g mouse-select-window on \;\
+  display 'Mouse: ON'
 
-# enable scroll with the mouse
-# set-option -g mouse-select-window on
-# set -g mode-mouse on
+# Mouse off
+bind M \
+  set -g mode-mouse off \;\
+  set -g mouse-resize-pane off \;\
+  set -g mouse-select-pane off \;\
+  set -g mouse-select-window off \;\
+  display 'Mouse: OFF'
 
 #### COLOUR (Solarized 256)
 #
