--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,6 +18,9 @@ set -sg escape-time 1
 # reload ~/.tmux.conf using PREFIX r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
+# Center the window list
+set -g status-justify centre
+
 # start windows numbering at 1
 set -g base-index 1
 
