New alias for commit with previous message but in editing mode

--- a/.gitconfig
+++ b/.gitconfig
@@ -10,6 +10,7 @@
     st   = status -sbuno
     br   = branch
     ci   = commit
+    cci  = commit -c HEAD
     co   = checkout
     lg   = log --graph --pretty=tformat:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%an %ar)%Creset'
     last = log --graph --pretty=tformat:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%an %ar)%Creset' -n 1
