Show temperature on i3 status bar

--- a/.i3status.conf
+++ b/.i3status.conf
@@ -17,6 +17,7 @@ order += "ethernet eth0"
 #order += "load"
 order += "time"
 order += "volume master"
+order += "cpu_temperature 0"
 
 wireless wlan0 {
         format_up = "W: (%quality at %essid) %ip"
@@ -58,4 +59,9 @@ volume master {
         device = "default"
         mixer = "Master"
         mixer_idx = 0
+}
+
+cpu_temperature 0 {
+        format = "T: %degrees °"
+        path = "/sys/devices/platform/coretemp.0/temp1_input"
 }
