--- a/.gitconfig
+++ b/.gitconfig
@@ -14,6 +14,7 @@
     co   = checkout
     lg   = log --graph --pretty=tformat:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%an %ar)%Creset'
     last = log --graph --pretty=tformat:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%an %ar)%Creset' -n 1
+    g    = grep -n
 
 [core]
     pager = cat
