--- a/.gitconfig
+++ b/.gitconfig
@@ -16,6 +16,7 @@
     ci   = commit
     cci  = commit -c HEAD
     co   = checkout
+    rh  = reset HEAD
     rhh  = reset HEAD --hard
     lg   = log --graph --pretty=tformat:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%an %ar)%Creset'
     last = log --graph --pretty=tformat:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%an %ar)%Creset' -n 1
