--- a/.tmux.conf
+++ b/.tmux.conf
@@ -87,4 +87,4 @@ set -g status-left "#[fg=colour244]#(/sbin/ifconfig eth0 | grep 'inet adr' | cut
 # show session name, window & pane number, date and time on right side of
 # status bar
 set -g status-right-length 60
-set -g status-right "#[fg=orange]#S:#I:#P #[bg=black,fg=brightblue]%l:%M %p"
+set -g status-right "#[fg=orange]#S:#I:#P #[bg=black,fg=white]%l:%M %p"
