Change color of some element in i3 config

--- a/.i3status.conf
+++ b/.i3status.conf
@@ -1,7 +1,7 @@
 general {
         output_format = "i3bar"
         colors = true
-        color_good = "#3EC3FF"
+        color_good = "#DDDDDD"
         color_degraded = "#FFBA3E"
         color_bad = "#990000"
         interval = 1
