--- a/.i3/config
+++ b/.i3/config
@@ -133,17 +133,22 @@ bindsym Mod1+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
+     # color_class      border  backg.  text
+client.focused          #222222 #222222 #dddddd
+client.focused_inactive #444444 #444444 #bbbbbb
+client.unfocused        #333333 #333333 #999999
+client.urgent           #000000 #000000 #000000
+
 bar {
   status_command i3status
   colors {
-    background #002b36
-    statusline #fdf6e3
+    background #333333
+    statusline #dddddd
 
-    # color_class      border  backg.  text
-    focused_workspace  #eee8d5 #eee8d5 #cb4b16
-    active_workspace   #073642 #073642 #cb4b16
-    inactive_workspace #002b36 #002b36 #93a1a1
-    urgent_workspace   #dc322f #dc322f #002b36
+    focused_workspace   #000000 #dddddd #333333
+    active_workspace    #333333 #333333 #009900
+    inactive_workspace  #333333 #333333 #999999
+    urgent_workspace    #dc322f #dc322f #002b36
   }
 }
 
