Add battery to tmux status line

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -84,7 +84,7 @@ set-window-option -g clock-mode-colour colour40 #green
 set -g status-left-length 70
 set -g status-left "#[fg=colour244] #(/sbin/ifconfig eth0 | grep 'inet adr' | cut -d: -f2 | awk '{print $1}') #[bg=black,fg=white] #(whoami)@#H "
 
-# show session name, window & pane number, date and time on right side of
+# show session name, window & pane number, date, time and battery on right side of
 # status bar
 set -g status-right-length 60
-set -g status-right "#[fg=orange]#S:#I:#P #[bg=black,fg=white] %l:%M %p "
+set -g status-right "#[fg=orange]#S:#I:#P #[bg=black,fg=white]%l:%M %p[#(~/.local/bin/battery Discharging; ~/.local/bin/battery Charging)]"
