--- a/.i3/config
+++ b/.i3/config
@@ -136,6 +136,8 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 
+new_window none
+
 # numix colors
 # f9f9f9    dedede    d64937    333333    2d2d2d
 
