tmux - disable delay after switch panes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,6 +24,9 @@ set -g status-justify centre
 # start windows numbering at 1
 set -g base-index 1
 
+# disable time between switch panes
+set-option repeat-time 0
+
 # make pane numbering consistent with windows
 setw -g pane-base-index 1
 
