tmux - set correctly repeat-time

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,7 +25,7 @@ set -g status-justify centre
 set -g base-index 1
 
 # disable time between switch panes
-set-option repeat-time 0
+set-option -g repeat-time 0
 
 # make pane numbering consistent with windows
 setw -g pane-base-index 1
