Tmux - force utf8

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,10 @@
 set -g default-terminal "screen-256color"
 
+# utf-8
+set -g utf8
+set-window-option -g utf8 on
+set -g status-utf8 on
+
 #gray 235
 #136 yellow
 #136 orange
