--- a/.i3/config
+++ b/.i3/config
@@ -25,7 +25,16 @@ bindsym $mod+Return exec konsole
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run -b -fn 'xft:Terminus:pixelsize=24' -nb '#333333' -nf '#f9f9f9' -sb '#2d2d2d' -sf '#d64937' -p 'Choose'
+# -i case insensitively
+# -b demenu at bottom
+# -l items vertically
+# -p prompt
+# -nb normal color (background)
+# -nf foreground (text)
+# -sb bg for selected item
+# -sf fg for selected item
+# -fn font
+bindsym $mod+d exec dmenu_run -i -b -l 20 -p '>' -nb '#2d2d2d' -nf '#666666' -sb '#d64937' -sf '#f9f9f9'
 
 # change focus
 bindsym $mod+j focus left
