i3 - add some icon to status bar

--- a/.i3status.conf
+++ b/.i3status.conf
@@ -3,7 +3,7 @@ general {
         colors = true
         color_good = "#DDDDDD"
         color_degraded = "#FFBA3E"
-        color_bad = "#990000"
+        color_bad = "#d64937"
         interval = 1
 }
 
@@ -11,7 +11,7 @@ general {
 order += "disk /"
 #order += "run_watch DHCP"
 #order += "run_watch VPN"
-#order += "wireless wlan0"
+order += "wireless wlan0"
 order += "ethernet eth0"
 #order += "battery 0"
 #order += "load"
@@ -20,14 +20,14 @@ order += "volume master"
 order += "cpu_temperature 0"
 
 wireless wlan0 {
-        format_up = "W: (%quality at %essid) %ip"
-        format_down = "W: down"
+        format_up = ": (%quality at %essid) %ip"
+        format_down = ": 💀"
 }
 
 ethernet eth0 {
         # if you use %speed, i3status requires root privileges
-        format_up = "E: %ip (%speed)"
-        format_down = "E: down"
+        format_up = " : %ip (%speed)"
+        format_down = ": 💀"
 }
 
 battery 0 {
@@ -43,7 +43,7 @@ run_watch VPN {
 }
 
 time {
-        format = "%Y-%m-%d %H:%M:%S"
+        format = "  %Y/%m/%d %H:%M:%S"
 }
 
 load {
@@ -51,11 +51,11 @@ load {
 }
 
 disk "/" {
-        format = "%free"
+        format = " %free"
 }
 
 volume master {
-        format = "♪: %volume"
+        format = ": %volume"
         device = "default"
         mixer = "Master"
         mixer_idx = 0
