--- a/.i3/config
+++ b/.i3/config
@@ -151,6 +151,11 @@ mode "resize" {
         bindsym Escape mode "default"
 }
 
+# pulse audio volume control
+bindsym XF86AudioLowerVolume exec amixer -D pulse sset Master '5%-'
+bindsym XF86AudioRaiseVolume exec amixer -D pulse sset Master '5%+'
+bindsym XF86AudioMute exec amixer -D pulse sset Master '0'
+
 bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
