--- a/.i3status.conf
+++ b/.i3status.conf
@@ -55,7 +55,7 @@ disk "/" {
 }
 
 volume master {
-        format = ": %volume"
+        format = ": %volume"
         device = "default"
         mixer = "Master"
         mixer_idx = 0
