--- a/.i3/config
+++ b/.i3/config
@@ -171,7 +171,10 @@ client.unfocused        #333333 #333333 #999999
 client.urgent           #000000 #000000 #000000
 
 bar {
-  status_command i3status
+  # For install py3status on debian
+  # apt-get install python-stdeb
+  # pypi-install py3status
+  status_command py3status -c ~/.i3status.conf
   position top
   colors {
     background #2d2d2d
