i3 - re-indent conf

--- a/.i3status.conf
+++ b/.i3status.conf
@@ -1,67 +1,68 @@
 general {
-        output_format = "i3bar"
-        colors = true
-        color_good = "#DDDDDD"
-        color_degraded = "#FFBA3E"
-        color_bad = "#d64937"
-        interval = 1
+    output_format = "i3bar"
+    colors = true
+    color_good = "#DDDDDD"
+    color_degraded = "#FFBA3E"
+    color_bad = "#d64937"
+    interval = 1
 }
 
-#order += "ipv6"
 order += "disk /"
-#order += "run_watch DHCP"
-#order += "run_watch VPN"
 order += "wireless wlan0"
 order += "ethernet eth0"
-#order += "battery 0"
-#order += "load"
 order += "time"
 order += "volume master"
-order += "cpu_temperature 0"
+
+#order += "cpu_temperature 0"
+#order += "ipv6"
+#order += "run_watch DHCP"
+#order += "run_watch VPN"
+#order += "battery 0"
+#order += "load"
 
 wireless wlan0 {
-        format_up = ": (%quality at %essid) %ip"
-        format_down = ": 💀"
+    format_up = ": (%quality at %essid) %ip"
+    format_down = ": 💀"
 }
 
 ethernet eth0 {
-        # if you use %speed, i3status requires root privileges
-        format_up = " : %ip (%speed)"
-        format_down = ": 💀"
+    # if you use %speed, i3status requires root privileges
+    format_up = " : %ip (%speed)"
+    format_down = ": 💀"
 }
 
 battery 0 {
-        format = "%status %percentage %remaining"
+    format = "%status %percentage %remaining"
 }
 
 run_watch DHCP {
-        pidfile = "/var/run/dhclient*.pid"
+    pidfile = "/var/run/dhclient*.pid"
 }
 
 run_watch VPN {
-        pidfile = "/var/run/vpnc/pid"
+    pidfile = "/var/run/vpnc/pid"
 }
 
 time {
-        format = "  %Y/%m/%d %H:%M:%S"
+    format = "  %Y/%m/%d %H:%M:%S"
 }
 
 load {
-        format = "%1min"
+    format = "%1min"
 }
 
 disk "/" {
-        format = " %free"
+    format = " %free"
 }
 
 volume master {
-        format = ": %volume"
-        device = "default"
-        mixer = "Master"
-        mixer_idx = 0
+    format = ": %volume"
+    device = "default"
+    mixer = "Master"
+    mixer_idx = 0
 }
 
 cpu_temperature 0 {
-        format = "T: %degrees °"
-        path = "/sys/devices/platform/coretemp.0/temp1_input"
+    format = "T: %degrees °"
+    path = "/sys/devices/platform/coretemp.0/temp1_input"
 }
