i3 - new way to detect vpn (openvpn)

--- a/.i3status.conf
+++ b/.i3status.conf
@@ -10,6 +10,7 @@ general {
 order += "disk /"
 order += "wireless wlan0"
 order += "ethernet eth0"
+order += "path_exists VPN"
 order += "time"
 order += "volume master"
 
@@ -65,4 +66,9 @@ volume master {
 cpu_temperature 0 {
     format = "T: %degrees °"
     path = "/sys/devices/platform/coretemp.0/temp1_input"
+}
+
+path_exists VPN {
+    # path exists when a VPN tunnel launched by nmcli/nm-applet is active
+    path = "/proc/sys/net/ipv4/conf/tun0"
 }
