--- a/.i3/config
+++ b/.i3/config
@@ -206,6 +206,5 @@ exec i3-config-wizard
 bindsym $mod+Shift+p exec xscreensaver-command -lock
 bindsym $mod+n exec nautilus ~
 
-exec_always ~/.config-screens.sh
-
+exec_always ~/.config-screens.sh && ~/.local/bin/wallpaper.sh
 exec --no-startup-id i3-msg 'exec xscreensaver -no-splash'
