--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".fonts"]
 	path = .fonts
 	url = https://github.com/powerline/fonts
+[submodule "i3-gaps"]
+	path = i3-gaps
+	url = https://www.github.com/Airblader/i3
