--- a/.i3/config
+++ b/.i3/config
@@ -169,6 +169,26 @@ bindsym XF86AudioMute exec amixer -D pulse sset Master '0'
 
 bindsym $mod+r mode "resize"
 
+#Gaps
+#depencies:
+# libxcb1-dev
+# libxcb-keysyms1-dev
+# libpango1.0-dev
+# libxcb-util0-dev
+# libxcb-icccm4-dev
+# libyajl-dev
+# libstartup-notification0-dev
+# libxcb-randr0-dev
+# libev-dev
+# libxcb-cursor-dev
+# libxcb-xinerama0-dev
+# libxcb-xkb-dev
+# libxkbcommon-dev
+# libxkbcommon-x11-dev
+gaps outer 5
+gaps inner 15
+smart_gaps on
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 
