--- a/.i3/config
+++ b/.i3/config
@@ -162,6 +162,7 @@ mode "resize" {
     bindsym Escape mode "default"
 }
 
+# Binding
 # pulse audio volume control
 bindsym XF86AudioLowerVolume exec amixer -D pulse sset Master '5%-'
 bindsym XF86AudioRaiseVolume exec amixer -D pulse sset Master '5%+'
