--- a/.i3/config
+++ b/.i3/config
@@ -235,5 +235,5 @@ exec i3-config-wizard
 bindsym $mod+Shift+p exec xscreensaver-command -lock
 bindsym $mod+n exec nautilus ~ --no-desktop
 
-exec_always ~/.config-screens.sh && ~/.local/bin/wallpaper.sh
+exec --no-startup-id i3-msg ~/.config-screens.sh && ~/.local/bin/wallpaper.sh
 exec --no-startup-id i3-msg 'exec xscreensaver -no-splash'
