sh - set new personnal variable env, for bin log

--- a/.shrc
+++ b/.shrc
@@ -5,4 +5,5 @@ export TERM="screen-256color"
 export TA_SOURCE="${HOME}/.local"
 export TA_SOURCE_CONF="${TA_SOURCE}/bashAndTmux"
 export TA_SOURCE_BIN="${TA_SOURCE}/bin"
+export TA_SOURCE_BIN_LOG="${TA_SOURCE_BIN}/log"
 export TA_SOURCE_BIN_LIB="${TA_SOURCE_BIN}/lib"
