--- a/.i3/config
+++ b/.i3/config
@@ -191,9 +191,9 @@ bindsym $mod+r mode "resize"
 # libxcb-xkb-dev
 # libxkbcommon-dev
 # libxkbcommon-x11-dev
-gaps outer 5
-gaps inner 15
-smart_gaps on
+# gaps outer 5
+# gaps inner 15
+# smart_gaps on
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
