i3 - Add some effect with compton

--- a/.i3/config
+++ b/.i3/config
@@ -242,3 +242,6 @@ bindsym $mod+n exec nautilus ~ --no-desktop
 
 exec --no-startup-id i3-msg ~/.config-screens.sh && ~/.local/bin/wallpaper.sh
 exec --no-startup-id i3-msg 'exec xscreensaver -no-splash'
+
+#Transparency and transition
+exec --no-startup-id compton -f
