--- a/.i3/config
+++ b/.i3/config
@@ -113,9 +113,14 @@ bindsym $mod+a focus parent
 #bindsym $mod+d focus child
 
 # switch to workspace
-bindsym $mod+1 workspace 1: 
-bindsym $mod+2 workspace 2: 
-bindsym $mod+3 workspace 3: 
+
+set $workspacePersonal 
+set $workspaceBrowser  
+set $workspaceTerminal 
+
+bindsym $mod+1 workspace 1: $workspacePersonal
+bindsym $mod+2 workspace 2: $workspaceBrowser
+bindsym $mod+3 workspace 3: $workspaceTerminal
 bindsym $mod+4 workspace 4
 bindsym $mod+5 workspace 5
 bindsym $mod+6 workspace 6
@@ -125,9 +130,9 @@ bindsym $mod+9 workspace 9
 bindsym $mod+0 workspace 10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace 1: 
-bindsym $mod+Shift+2 move container to workspace 2: 
-bindsym $mod+Shift+3 move container to workspace 3: 
+bindsym $mod+Shift+1 move container to workspace 1: $workspacePersonal
+bindsym $mod+Shift+2 move container to workspace 2: $workspaceBrowser
+bindsym $mod+Shift+3 move container to workspace 3: $workspaceTerminal
 bindsym $mod+Shift+4 move container to workspace 4
 bindsym $mod+Shift+5 move container to workspace 5
 bindsym $mod+Shift+6 move container to workspace 6
