--- a/.i3status.conf
+++ b/.i3status.conf
@@ -28,8 +28,8 @@ wireless wlan0 {
 
 ethernet eth0 {
     # if you use %speed, i3status requires root privileges
-    format_up = " : %ip (%speed)"
-    format_down = ": 💀"
+    format_up = " : %ip (%speed)"
+    format_down = ": 💀"
 }
 
 battery 0 {
@@ -45,7 +45,7 @@ run_watch VPN {
 }
 
 time {
-    format = "  %Y/%m/%d %H:%M:%S"
+    format = "  %Y/%m/%d %H:%M:%S"
 }
 
 load {
