--- a/.i3/config
+++ b/.i3/config
@@ -248,7 +248,7 @@ exec i3-config-wizard
 bindsym $mod+Shift+p exec ~/.local/bin/i3lockWallpaper.sh
 bindsym $mod+n exec nautilus ~ --no-desktop
 
-exec --no-startup-id i3-msg ~/.config-screens.sh && ~/.local/bin/wallpaper.sh
+exec_always ~/.config-screens.sh && ~/.local/bin/wallpaper.sh
 exec --no-startup-id i3-msg 'exec xscreensaver -no-splash'
 
 #Transparency and transition
