--- a/.i3/config
+++ b/.i3/config
@@ -140,7 +140,9 @@ bindsym $mod+Shift+6 move container to workspace 6
 bindsym $mod+Shift+7 move container to workspace 7
 bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
-bindsym $mod+Shift+0 move container to workspace 10
+bindsym $mod+Shift+0 move container to workspace 10: $workspaceMusic
+
+assign [class="Lollypop"] 10: $workspaceMusic
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -253,3 +255,5 @@ exec --no-startup-id i3-msg 'exec xscreensaver -no-splash'
 
 #Transparency and transition
 exec --no-startup-id compton -f
+
+exec lollypop
