i3 - set multimedia keys controlling audio playing

--- a/.i3/config
+++ b/.i3/config
@@ -175,11 +175,16 @@ mode "resize" {
     bindsym Escape mode "default"
 }
 
-# Binding
 # pulse audio volume control
 bindsym XF86AudioLowerVolume exec amixer -D pulse sset Master '5%-'
 bindsym XF86AudioRaiseVolume exec amixer -D pulse sset Master '5%+'
 bindsym XF86AudioMute exec amixer -D pulse sset Master '0'
+
+# player controls with playerctl
+# https://github.com/acrisci/playerctl/releases
+bindsym XF86AudioPlay exec playerctl play-pause
+bindsym XF86AudioNext exec playerctl next
+bindsym XF86AudioPrev exec playerctl previous
 
 bindsym $mod+r mode "resize"
 
