i3 - Change how i3 launch config-screens and wallpaper

--- a/.i3/config
+++ b/.i3/config
@@ -255,7 +255,7 @@ bar {
 #######################################################################
 exec i3-config-wizard
 
-exec_always ~/.config-screens.sh && ~/.local/bin/wallpaper.sh
+exec_always "~/.config-screens.sh; ~/.local/bin/wallpaper.sh"
 exec --no-startup-id i3-msg 'exec xscreensaver -no-splash'
 
 #Transparency and transition
