--- a/.shrc
+++ b/.shrc
@@ -7,3 +7,32 @@ export TA_SOURCE_CONF="${TA_SOURCE}/bashAndTmux"
 export TA_SOURCE_BIN="${TA_SOURCE}/bin"
 export TA_SOURCE_BIN_LOG="${TA_SOURCE_BIN}/log"
 export TA_SOURCE_BIN_LIB="${TA_SOURCE_BIN}/lib"
+
+# export port tmux in file
+# so tmux can update this port if is changed
+display_for_tmux_path=~/.local/tmp/.display_for_tmux
+
+if [[ "$TMUX" == '' ]]; then
+    echo $DISPLAY > ${display_for_tmux_path}
+elif [[ -f ${display_for_tmux_path} ]]; then
+    export DISPLAY=$(\cat ${display_for_tmux_path})
+fi
+
+display_for_tmux_path=~/.local/tmp/.display_for_tmux
+
+if [[ ! -d ~/.local/tmp ]]; then
+    mkdir ~/.local/tmp
+fi
+
+# Locally binaries
+if [ -d ~/.local/bin ]; then
+    PATH=$PATH:~/.local/bin
+fi
+
+if [ -d ~/.local/bin/vim ]; then
+    PATH=~/.local/bin/vim/bin:$PATH
+fi
+
+if [ -d ~/.local/git ]; then
+    PATH=~/.local/git/bin:$PATH
+fi
