--- a/.gitconfig
+++ b/.gitconfig
@@ -28,7 +28,7 @@
 
 [core]
     pager = less
-    editor = vim
+    editor = nvim
     whitespace = -trailing-space
     # core.trustctime
     # If false, the ctime differences between the index and the working tree are ignored;
