--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "i3-gaps"]
 	path = i3-gaps
 	url = https://www.github.com/Airblader/i3
+[submodule ".nerd-fonts"]
+	path = .nerd-fonts
+	url = https://github.com/ryanoasis/nerd-fonts
