--- a/.gitconfig
+++ b/.gitconfig
@@ -40,11 +40,12 @@
     ci   = commit
     cci  = commit -c HEAD
     co   = checkout
-    rh  = reset HEAD
+    rh   = reset HEAD
     rhh  = reset HEAD --hard
     lg   = log --graph --pretty=tformat:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%an %ar)%Creset'
     last = log --graph --pretty=tformat:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%an %ar)%Creset' -n 1
     g    = grep -n
+    pfp  = push --force-with-lease
 
 [core]
     pager = less
