--- a/.tmux.conf
+++ b/.tmux.conf
@@ -53,29 +53,21 @@ bind M \
   display 'Mouse: OFF'
 
 #### COLOUR (Solarized 256)
-#
 # default statusbar colors
-set-option -g status-bg colour235 #gray
-set-option -g status-fg colour130 #yellow
-set-option -g status-attr default
+set-option -g status-style bg=colour235,fg=colour130
 
 # default window title colors
-set-window-option -g window-status-fg colour244
-set-window-option -g window-status-bg default
-set-window-option -g window-status-attr dim
+set-window-option -g window-status-style bg=default,fg=colour244
 
 # active window title colors
-set-window-option -g window-status-current-fg colour235
-set-window-option -g window-status-current-bg colour136
-set-window-option -g window-status-current-attr bright
+set-window-option -g window-status-current-style fg=colour235,bg=colour136
 
 # pane border
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
+set-option -g pane-border-style fg=colour235 #base02
+set-option -g pane-active-border-style fg=colour240 #base01
 
 # message text
-set-option -g message-bg colour235 #base02
-set-option -g message-fg colour166 #orange
+set -g message-style bg=colour235,fg=colour166
 
 # pane number display
 set-option -g display-panes-active-colour colour33 #blue
