--- a/.i3/config
+++ b/.i3/config
@@ -243,3 +243,6 @@ exec --no-startup-id i3-msg 'exec xscreensaver -no-splash'
 exec --no-startup-id compton -f
 
 exec spotify
+exec variety
+exec signal-desktop
+exec com.brave.Browser
