--- a/.i3/config
+++ b/.i3/config
@@ -122,13 +122,13 @@ bindsym $mod+Shift+e exit
 # switch to workspace
 
 set $workspacePersonal 
-set $workspaceBrowser  
-set $workspaceTerminal 
+set $workspacePro  
+set $workspaceStudent 
 set $workspaceMusic 
 
 bindsym $mod+1 workspace 1: $workspacePersonal
-bindsym $mod+2 workspace 2: $workspaceBrowser
-bindsym $mod+3 workspace 3: $workspaceTerminal
+bindsym $mod+2 workspace 2: $workspacePro
+bindsym $mod+3 workspace 3: $workspaceStudent
 bindsym $mod+4 workspace 4
 bindsym $mod+5 workspace 5
 bindsym $mod+6 workspace 6
@@ -139,8 +139,8 @@ bindsym $mod+0 workspace 10: $workspaceMusic
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace 1: $workspacePersonal
-bindsym $mod+Shift+2 move container to workspace 2: $workspaceBrowser
-bindsym $mod+Shift+3 move container to workspace 3: $workspaceTerminal
+bindsym $mod+Shift+2 move container to workspace 2: $workspacePro
+bindsym $mod+Shift+3 move container to workspace 3: $workspaceStudent
 bindsym $mod+Shift+4 move container to workspace 4
 bindsym $mod+Shift+5 move container to workspace 5
 bindsym $mod+Shift+6 move container to workspace 6
