i3 - update status bar

--- a/.i3status.conf
+++ b/.i3status.conf
@@ -8,7 +8,7 @@ general {
 }
 
 order += "disk /"
-order += "wireless wlan0"
+order += "wireless wlp0s26u1u4" #depend of the interface
 order += "ethernet eth0"
 order += "path_exists VPN"
 order += "time"
@@ -21,9 +21,9 @@ order += "volume master"
 #order += "battery 0"
 #order += "load"
 
-wireless wlan0 {
-    format_up = ": (%quality at %essid) %ip"
-    format_down = ": 💀"
+wireless wlp0s26u1u4 { #Name of the wifi interface
+    format_up = "  %quality   %essid   %ip"
+    format_down = "  "
 }
 
 ethernet eth0 {
@@ -45,7 +45,7 @@ run_watch VPN {
 }
 
 time {
-    format = "  %Y/%m/%d %H:%M:%S"
+    format = "  %Y/%m/%d %H:%M:%S"
 }
 
 load {
